# segway

./: README.md  compile.sh  joystick_segway.sh  kill-segway-ros.sh  kill.sh  momo.run  momo_arm64.run  momo_x64.run  rqt_plot.run  run.sh  segway_rmp_node.run  sora_arm64.run  sora_x64.run  start  webrtc_logs_0
libsegwayrmp/: .gitignore  CMakeLists.txt  Findlibsegwayrmp.cmake  package.xml
libsegwayrmp/cmake/: segwayrmp_ftd2xx.cmake  segwayrmp_serial.cmake
libsegwayrmp/include/segwayrmp/: segwayrmp.h
libsegwayrmp/libsegwayrmp-0.2.1/: package.xml
libsegwayrmp/src/: segwayrmp.cc
src/mywork/: obstacleDetection.py  package.xml
src/segway_rmp/: CMakeLists.txt  package.xml  serialPathConfig.h.in
src/segway_rmp/launch/: segway_rmp.launch
src/segway_rmp/msg/: AccelCmd.msg  SegwayStatus.msg  SegwayStatusStamped.msg  VelocityStatus.msg  jyja.msg
src/segway_rmp/src/: accel_cmd.cpp  segway_rmp_node.cpp
webrtc_momo/: .gitignore  sora  webrtc_logs_0
webrtc_momo/html/: demo.html  smart.html  test.html  webrtc.js
webrtc_momo/html/js/: webrtc.js  webrtc_test.js
