<package format="2">
    <name>mywork</name>
    <version>1.0.0</version>
    <description>realsense mywork</description>
    <maintainer email="ojima-yukiya@ed.tmu.ac.jp">ojima yukiya</maintainer>
    <license>NONE</license>
    <buildtool_depend>catkin</buildtool_depend>
    <!-- <exec_depend>objectDetection</exec_depend> -->
</package>
